--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -292,23 +292,24 @@
                       Take some time to rest. After lunch, you'll transfer to
                       Ala-Archa National Park, which is located 40 km away.
                       There, you'll find yourself in an alpine gorge through
-                      which the fast- flowing Ala-Archa River runs. This gorge
-                      is flanked by tall, snow-covered peaks with steep-sided,
+                      which the fast-flowing Ala-Archa River runs. This gorge is
+                      flanked by tall, snow-covered peaks with steep-sided,
                       forested mountain slopes.
                     </p>
                     <div class="overnight">
                       <i class="fa fa-home"></i>
-                      <p>Overnight: Freedom hotel or My hotel</p>
+                      <p>Overnight: Freedom hotel, My hotel or Futuro</p>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+
           <div class="itinerary-day-cal">
             <div class="itinerary-question">
-              <h3><span>Day 2</span> - Bishkek – Karakol</h3>
-              <p>(~460 km – driving)</p>
+              <h3><span>Day 2</span> - Bishkek- Chon Kemin</h3>
+              <p>(148 km – driving)</p>
 
               <svg width="15" height="10" viewBox="0 0 42 25">
                 <path
@@ -328,29 +329,27 @@
                 <div class="about-tour-col">
                   <div class="about-tour-col-info">
                     <p>
-                      After breakfast, we'll drive to Karakol city in the
-                      Issyk-Kul region. In Cholpon-Ata city, you can enjoy the
-                      sight of the second largest alpine lake and have lunch.
-                      Following lunch, we'll continue our journey to Karakol
-                      city. Along the way, we'll make stops at Grigorevka and
-                      Semenovka gorges, which are known for hosting the World
-                      Nomad Games. Our guide will prepare coffee for you,
-                      offering a beautiful view of the gorge. Dinner will be
-                      served at the ethno restaurant Dastorkon.
+                      After breakfast we will arrive at the Chon Kemin Guest
+                      house. You will embark on a horseback riding excursion to
+                      Chon Kemin gorge, which will take approximately 2-3
+                      hours.Lunch and Dinner in the guest house.
                     </p>
                     <div class="overnight">
                       <i class="fa fa-home"></i>
-                      <p>Overnight: Muras or Green Yard guest house .</p>
+                      <p>Overnight:Jekshen guest house</p>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+
           <div class="itinerary-day-cal">
             <div class="itinerary-question">
-              <h3><span>Day 3</span> - Trekking to Altyn Arashan</h3>
-              <p>(30 km – driving)</p>
+              <h3>
+                <span>Day 3</span> - Chon Kemin – Grigorievka gorge - Karakol
+              </h3>
+              <p>(~300 km – driving)</p>
 
               <svg width="15" height="10" viewBox="0 0 42 25">
                 <path
@@ -365,6 +364,48 @@
               <div class="row-2">
                 <div class="about-tour-col">
                   <img src="image-itinerary/day-3.png" />
+                </div>
+
+                <div class="about-tour-col">
+                  <div class="about-tour-col-info">
+                    <p>
+                      After breakfast, we'll drive to Karakol city in the
+                      Issyk-Kul region. In Cholpon-Ata city, you can enjoy the
+                      sight of the second largest alpine lake and have lunch.
+                      Following lunch, we'll continue our journey to Karakol
+                      city. Along the way, we'll make stops at Grigorevka and
+                      Semenovka gorges, which are known for hosting the World
+                      Nomad Games. Our guide will prepare coffee for you,
+                      offering a beautiful view of the gorge. Dinner will be
+                      served at the ethno restaurant Dastorkon.
+                    </p>
+                    <div class="overnight">
+                      <i class="fa fa-home"></i>
+                      <p>Overnight: Muras or Green Yard guest house</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="itinerary-day-cal">
+            <div class="itinerary-question">
+              <h3><span>Day 4</span> - Hiking in Altyn Arashan</h3>
+              <p>(~30 km – driving)</p>
+
+              <svg width="15" height="10" viewBox="0 0 42 25">
+                <path
+                  d="M3 3L21 21L39 3"
+                  stroke="black"
+                  stroke-width="7"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </div>
+            <div class="itinerary-answer">
+              <div class="row-2">
+                <div class="about-tour-col">
+                  <img src="images/day 4.png" />
                 </div>
 
                 <div class="about-tour-col">
@@ -392,52 +433,10 @@
           <div class="itinerary-day-cal">
             <div class="itinerary-question">
               <h3>
-                <span>Day 4</span> - Karakol – Jeti Oguz valley – Fairy tale
+                <span> Day 5 </span> - Karakol – Jeti Oguz valley – Fairy tale
                 canyon
               </h3>
-              <p>(~160 km – driving) (~3 km – trekking)</p>
-
-              <svg width="15" height="10" viewBox="0 0 42 25">
-                <path
-                  d="M3 3L21 21L39 3"
-                  stroke="black"
-                  stroke-width="7"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </div>
-            <div class="itinerary-answer">
-              <div class="row-2">
-                <div class="about-tour-col">
-                  <img src="images/day 4.png" />
-                </div>
-
-                <div class="about-tour-col">
-                  <div class="about-tour-col-info">
-                    <p>
-                      Today, the Russian military car will pick us up and take
-                      us back to the city where we will continue our trip. We'll
-                      be driving along the south shore of Issyk-Kul Lake, the
-                      second- largest alpine lake in the world after Titicaca in
-                      Peru. Today, you'll have the opportunity to enjoy a picnic
-                      by the pristine lake, visit some fairy tale canyons, and
-                      witness the striking red rock of Jeti-Oguz, set against
-                      the backdrop of snow-capped mountains. You can also watch
-                      an eagle hunting show today.
-                    </p>
-                    <div class="overnight">
-                      <i class="fa fa-home"></i>
-                      <p>Overnight: Local guest house</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="itinerary-day-cal">
-            <div class="itinerary-question">
-              <h3><span> Day 5 </span> - Bokonbaeva – Son Kol lake</h3>
-              <p>( 260 km – driving)</p>
+              <p>(~160 km – driving) (~3 km –trekking)</p>
 
               <svg width="15" height="10" viewBox="0 0 42 25">
                 <path
@@ -452,6 +451,46 @@
               <div class="row-2">
                 <div class="about-tour-col">
                   <img src="images/day 5.png" />
+                </div>
+
+                <div class="about-tour-col">
+                  <div class="about-tour-col-info">
+                    <p>
+                      Today, the Russian military car will pick us up and take
+                      us back to the city where we will continue our trip. We'll
+                      be driving along the south shore of Issyk-Kul Lake, the
+                      second-largest alpine lake in the world after Titicaca in
+                      Peru. Today, you'll visit Fairy tail canyons and witness
+                      the striking red rock of Jeti-Oguz, set against the
+                      backdrop of snow-capped mountains.
+                    </p>
+                    <div class="overnight">
+                      <i class="fa fa-home"></i>
+                      <p>Overnight: Local guest house</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="itinerary-day-cal">
+            <div class="itinerary-question">
+              <h3><span>Day 6 </span> - Bokonbaeva – Song Kol lake</h3>
+              <p>( 260 km – driving)</p>
+
+              <svg width="15" height="10" viewBox="0 0 42 25">
+                <path
+                  d="M3 3L21 21L39 3"
+                  stroke="black"
+                  stroke-width="7"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </div>
+            <div class="itinerary-answer">
+              <div class="row-2">
+                <div class="about-tour-col">
+                  <img src="image-itinerary/day-6.png" />
                 </div>
 
                 <div class="about-tour-col">
@@ -477,10 +516,11 @@
               </div>
             </div>
           </div>
+
           <div class="itinerary-day-cal">
             <div class="itinerary-question">
-              <h3><span>Day 6 </span> - Son Kol lake – Chon Kemin</h3>
-              <p>(200 km – driving)</p>
+              <h3><span>Day 7</span> - SongKollake–Bishkek</h3>
+              <p>(250km–driving)</p>
 
               <svg width="15" height="10" viewBox="0 0 42 25">
                 <path
@@ -494,74 +534,32 @@
             <div class="itinerary-answer">
               <div class="row-2">
                 <div class="about-tour-col">
-                  <img src="image-itinerary/day-6.png" />
+                  <img src="image-itinerary/day 2 3.jpg" />
                 </div>
 
                 <div class="about-tour-col">
                   <div class="about-tour-col-info">
                     <p>
-                      Morning to noon: You will have time to enjoy the stunning
-                      view of Song Kol Lake and take a leisurely walk along one
-                      of the highest alpine lakes in Kyrgyzstan. After lunch, we
-                      will embark on a scenic drive to Chon Kemin Gorge, passing
-                      through Kalmak Pass. The journey is expected to take
-                      around 3 hours. Our guest house in Chon Kemin is nestled
-                      next to the mountains, and we anticipate arriving in the
-                      early evening. Dinner will be served in the guest house.
+                      Following this adventure, you will transfer to Bishkek. On
+                      the way, you'll visit the Burana Tower architectural
+                      complex, which dates back to the 10th and 11th centuries
+                      and played a significant role on the Great Silk Road. The
+                      complex is situated 15 km from the main road. Lunch will
+                      be served at the Dunghan family house. From there, you
+                      will be transported back to Bishkek, where you'll have
+                      some free time to explore. In the evening, a farewell
+                      dinner at a local restaurant will be awaiting you.
                     </p>
                     <div class="overnight">
                       <i class="fa fa-home"></i>
-                      <p>Overnight: Local guest house</p>
+                      <p>Overnight: Freedom hotel, My hotel or Futuro</p>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="itinerary-day-cal">
-            <div class="itinerary-question">
-              <h3><span>Day 7</span> - Chon Kemin - Bishkek</h3>
-              <p>(150 km – driving)</p>
 
-              <svg width="15" height="10" viewBox="0 0 42 25">
-                <path
-                  d="M3 3L21 21L39 3"
-                  stroke="black"
-                  stroke-width="7"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </div>
-            <div class="itinerary-answer">
-              <div class="row-2">
-                <div class="about-tour-col">
-                  <img src="image-itinerary/day-7.png" />
-                </div>
-
-                <div class="about-tour-col">
-                  <div class="about-tour-col-info">
-                    <p>
-                      After breakfast, you will embark on a horseback riding
-                      excursion to Chon Kmein gorge, which will take
-                      approximately 1 hour. Following this adventure, you will
-                      transfer to Bishkek. On the way, you'll visit the Burana
-                      Tower architectural complex, which dates back to the 10th
-                      and 11th centuries and played a significant role on the
-                      Great Silk Road. Lunch will be served at the Dunghan
-                      family house. From there, you will be transported back to
-                      Bishkek, where you'll have some free time to explore. In
-                      the evening, a farewell dinner at a local restaurant will
-                      be awaiting you.
-                    </p>
-                    <div class="overnight">
-                      <i class="fa fa-home"></i>
-                      <p>Overnight: Freedom, My hotel , Futuro</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="itinerary-day-cal">
             <div class="itinerary-question">
               <h3>Day 8 - Transfer Airport</h3>
