--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -323,7 +323,7 @@
             <div class="itinerary-answer">
               <div class="row-2">
                 <div class="about-tour-col">
-                  <img src="image-itinerary/day 2 3.jpg" />
+                  <img src="image-itinerary/chon-kemin.jpg" />
                 </div>
 
                 <div class="about-tour-col">
@@ -363,7 +363,7 @@
             <div class="itinerary-answer">
               <div class="row-2">
                 <div class="about-tour-col">
-                  <img src="image-itinerary/day-3.png" />
+                  <img src="image-itinerary/day 2 3.jpg" />
                 </div>
 
                 <div class="about-tour-col">
@@ -405,7 +405,7 @@
             <div class="itinerary-answer">
               <div class="row-2">
                 <div class="about-tour-col">
-                  <img src="images/day 4.png" />
+                  <img src="image-itinerary/day-3.png" />
                 </div>
 
                 <div class="about-tour-col">
@@ -450,7 +450,7 @@
             <div class="itinerary-answer">
               <div class="row-2">
                 <div class="about-tour-col">
-                  <img src="images/day 5.png" />
+                  <img src="images/day 4.png" />
                 </div>
 
                 <div class="about-tour-col">
@@ -490,7 +490,7 @@
             <div class="itinerary-answer">
               <div class="row-2">
                 <div class="about-tour-col">
-                  <img src="image-itinerary/day-6.png" />
+                  <img src="images/day 5.png" />
                 </div>
 
                 <div class="about-tour-col">
@@ -519,7 +519,7 @@
 
           <div class="itinerary-day-cal">
             <div class="itinerary-question">
-              <h3><span>Day 7</span> - SongKollake–Bishkek</h3>
+              <h3><span>Day 7</span> - Song-Kol lake - Bishkek</h3>
               <p>(250km–driving)</p>
 
               <svg width="15" height="10" viewBox="0 0 42 25">
@@ -534,7 +534,7 @@
             <div class="itinerary-answer">
               <div class="row-2">
                 <div class="about-tour-col">
-                  <img src="image-itinerary/day 2 3.jpg" />
+                  <img src="image-itinerary/new-day-sevenpng.png" />
                 </div>
 
                 <div class="about-tour-col">
