--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -198,7 +198,12 @@
       <div class="description-highlights-map">
         <div class="description-highlights">
           <div class="description">
-            <h2>今年夏天拼團日期, 每個月開一團, 一個人也可以參加！</h2>
+            <h2>
+              包團兩人以上成行， 全年隨時出發，行程可依客人興趣微調。 <br />
+            </h2>
+          </div>
+          <div class="description">
+            <h2>拼團一個人也可以參加，今年夏天每個月開一團。</h2>
             <p>
               &nbsp; &nbsp; 6/17-6/23 七天&nbsp; &nbsp; &nbsp; &nbsp; 7/22 -
               7/29 八天&nbsp; &nbsp; &nbsp; &nbsp; 8/4 - 8/10 七天&nbsp; &nbsp;
@@ -609,7 +614,7 @@
               </li>
               <li>
                 <i class="fa fa-check-square fa-lg"></i>
-                -Accommodation in for 7 nights (twin rooms)
+                -Accommodation in for 6 nights (twin rooms)
               </li>
               <li>
                 <i class="fa fa-check-square fa-lg"></i> -Meals: 7 dinner and 7
@@ -661,39 +666,65 @@
           <div class="important-info-col">
             <h2>預訂注意事項</h2>
             <ol>
-              <li>訂金金額：每人團費30%</li>
-              <li>訂金繳交期限：確認訂單送出表單5天內</li>
-              <li>請申請到簽證後再購買機票（吉爾吉斯簽證有不確定性）</li>
               <li>
-                請確認護照有效期限、必需於本行程回國日算起，有六個月以上之效期。
+                訂金金額：每人300 美金，
+                餘額請抵達當地第一天交付美元現金給導遊。
               </li>
+
               <li>
-                本行程可延長住宿天數，代訂BIshkek Freedom Hotel 一晚62美金
+                包團會安排一次免費接送機服務。<br />
+                拼團依最多人抵達和離開的時間，安排一次免費機場接送，<br />
+                其他時間可以安排付費的機場接送，單程一趟12美金，<br />
+                也可以向我們索取搭公車的路線方法。
               </li>
+
               <li>
-                小費：當地導遊司機服務費<br /> 旅客每人一日十美金  <br />
-                七日七十美金 <br />
-                八日八十美金
+                請申請到簽證後再自行購買機票， 吉爾吉斯首都是 Bishkek <br />
+                訂機票請注意，首都機場代碼code 是FRU。
               </li>
+
               <li>
-                拼團會協助同性別安排雙人房，<br />
-                如需要單人房或是無法湊雙數安排，<br />
-                單人房每晚加價25 美金
+                參加包團， 拼團的簽證代辦費為70美金一人， 10個工作天, <br />
+                簽證效期一個月，請提供確切出發日期，保守起見，日期可以提前預估幾天。
               </li>
+
               <li>
-                在首都第一天我們會請換錢的人到飯店 <br />
-                為您服務, 請準備美金換當地貨幣
+                請確認護照有效期限、必需於本行程回國日算起，
+                有六個月以上之效期。
               </li>
+
               <li>
-                我們有安排到當地人家用餐，<br />
-                如喜歡他們的服務， 歡迎提供小費 <br />
+                本行程可延長住宿天數，代訂BIshkek Freedom Hotel
+                一晚一間雙人房62美金，含早餐。
               </li>
+
               <li>
-                行程有時會因航班、食宿安排、天候、<br />
+                飯店和民宿是雙人房， 蒙古包是四人房， <br />
+                拼團會協助同性別安排雙人房，如需單人房或是無法湊雙數安排，
+                <br />
+                單人房每晚加價25 美金。
+              </li>
+
+              <li>
+                在首都第一天我們會請換錢的人到飯店為您服務, 請準備美金換當地貨幣
+              </li>
+
+              <li>
+                小費：當地導遊司機服務費旅客每人一日十美金，七日七十美金，<br />
+                八日八十美金，以此類推。
+              </li>
+
+              <li>
+                我們有安排到當地人家用餐， 如喜歡他們的服務， 歡迎提供小費。
+              </li>
+
+              <li>
+                行程有時會因航班、食宿安排、天候、
                 交通…等因素而更動次序，敬請見諒。
               </li>
+
               <li>
-                如遇不可抗拒情況，本公司保有變更交通工具或旅行方式之權利。
+                如遇不可抗拒情況， 本公司保有變更交通工具或旅行方式之權利。
               </li>
             </ol>
           </div>
