--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -614,7 +614,7 @@
               </li>
               <li>
                 <i class="fa fa-check-square fa-lg"></i>
-                -Accommodation in for 6 nights (twin rooms)
+                -Accommodation in for 7 nights (twin rooms)
               </li>
               <li>
                 <i class="fa fa-check-square fa-lg"></i> -Meals: 7 dinner and 7
@@ -667,64 +667,74 @@
             <h2>預訂注意事項</h2>
             <ol>
               <li>
-                訂金金額：每人300 美金，
+                訂金金額：團費300美元每人， <br />
+                可選擇匯款美金到吉爾吉斯或是台北桃園面交美金 <br />
+                （旅行社設立在吉爾吉斯，抱歉無法接受台幣匯款） <br />
                 餘額請抵達當地第一天交付美元現金給導遊。
               </li>
 
               <li>
-                包團會安排一次免費接送機服務。<br />
-                拼團依最多人抵達和離開的時間，安排一次免費機場接送，<br />
-                其他時間可以安排付費的機場接送，單程一趟12美金，<br />
-                也可以向我們索取搭公車的路線方法。
-              </li>
-
-              <li>
-                請申請到簽證後再自行購買機票， 吉爾吉斯首都是 Bishkek <br />
-                訂機票請注意，首都機場代碼code 是FRU。
-              </li>
-
-              <li>
-                參加包團， 拼團的簽證代辦費為70美金一人， 10個工作天, <br />
-                簽證效期一個月，請提供確切出發日期，保守起見，日期可以提前預估幾天。
-              </li>
-
-              <li>
-                請確認護照有效期限、必需於本行程回國日算起，
-                有六個月以上之效期。
-              </li>
-
-              <li>
-                本行程可延長住宿天數，代訂BIshkek Freedom Hotel
-                一晚一間雙人房62美金，含早餐。
-              </li>
-
-              <li>
-                飯店和民宿是雙人房， 蒙古包是四人房， <br />
-                拼團會協助同性別安排雙人房，如需單人房或是無法湊雙數安排，
+                包團會安排一次免費接送機服務。 拼團依最多人抵達和離開的時間，
                 <br />
-                單人房每晚加價25 美金。
+                安排一次免費機場接送， 其他時間可以安排付費的機場接送， <br />
+                單程一趟12美金。
               </li>
 
               <li>
-                在首都第一天我們會請換錢的人到飯店為您服務, 請準備美金換當地貨幣
+                台灣護照要申請簽證， 請告知出發的日期。簽證效期一個月。<br />
+                參加團的簽證費用是 70美金 ( 100%通過) 需要 <br />
+                護照影本電子檔和個人照一張 請人用手機拍攝，背景白色即可 <br />
+                （請勿翻拍證件照，不清楚）
               </li>
 
               <li>
-                小費：當地導遊司機服務費旅客每人一日十美金，七日七十美金，<br />
+                吉爾吉斯首都是 Bishkek， 訂機票請注意，首都機場代碼code 是FRU。
+                <br />
+                推薦航班可在土耳其，杜拜，首爾，四川，烏魯木齊轉機。
+              </li>
+
+              <li>
+                請確認護照有效期限、必需於本行程回國日算起，有六個月以上之效期。
+              </li>
+
+              <li>
+                本行程可延長住宿天數， 代訂Bishkek Freedom Hotel <br />
+                一晚雙床房62美金。 建議提早一天到。可以休息一下也能市區bazaar
+                <br />
+                逛逛， 隔天開始充實的七天行程， <br />
+                行程最後一天，約傍晚5-7點結束會送大家回飯店休息， <br />
+                行程包含七天住宿。
+              </li>
+
+              <li>
+                小費：當地導遊司機服務費 ， 旅客每人一日十美金，  七日七十美金。
+                <br />
                 八日八十美金，以此類推。
               </li>
 
               <li>
-                我們有安排到當地人家用餐， 如喜歡他們的服務， 歡迎提供小費。
+                蒙古包四人房，飯店和民宿是雙床房。 拼團會協助同性別安排雙人房，
+                <br />
+                如需要單人房或是無法湊雙數安排， 單人房每晚加價25 美金。
               </li>
 
               <li>
-                行程有時會因航班、食宿安排、天候、
-                交通…等因素而更動次序，敬請見諒。
+                在首都第一天我們會請換錢的人到飯店。 為您服務， <br />
+                請準備美金換當地貨幣。
               </li>
 
               <li>
-                如遇不可抗拒情況， 本公司保有變更交通工具或旅行方式之權利。
+                我們有安排到當地人家用餐，  如喜歡他們的服務, 歡迎提供小費。
+                <br />
+                如果可以也能帶給當地孩子一些糖果或巧克力（他們非常喜歡）
+              </li>
+
+              <li>
+                行程有時會因航班、食宿安排、天候、 交通…等因素而更動次序，敬請見
+              </li>
+
+              <li>
+                如遇不可抗拒情況，本公司保有變更交通工具或旅行方式之權利。
               </li>
             </ol>
           </div>
