--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="index.html"
           ><img
             class="head-ruby-logo"
-            src="bek-ruby-logo/white-bek-ruby.png"
+            src="bek-ruby-logo/white-bek-ruby.svg"
             alt="Bek Ruby Logo"
         /></a>
         <div class="nav-links" id="navLinks">
@@ -77,7 +77,7 @@
     <section class="about-us-section">
       <div class="about-us">
         <div class="about-left">
-          <img src="about-us-img/about-us-homepage-3.png" alt="" />
+          <img src="about-us-img/low-quality-photo.jpg" alt="" />
         </div>
         <div class="about-right">
           <h1>我們的故事</h1>
@@ -180,7 +180,7 @@
           <a href="blog-article.html">
             <div class="top-blog">
               <p class="about-blog-p">28 june 2023</p>
-              <img src="blog/5 thins to do.png" alt="" />
+              <img src="blog/5 thins to do.jpg" alt="" />
             </div>
             <h3>來吉爾吉斯 一定要體驗的五件事</h3>
             <p></p>
@@ -191,7 +191,7 @@
           <a href="blog-article-1.html">
             <div class="top-blog-second">
               <p class="about-blog-p">12 april 2024</p>
-              <img src="blog/murmur.png" alt="" />
+              <img src="blog/murmur.jpg" alt="" />
             </div>
             <h3>吸引力法則（嚕比）</h3>
             <p></p>
@@ -201,7 +201,7 @@
           <a href="blog-article-2.html">
             <div class="top-blog-third">
               <p class="about-blog-p">25 march 2023</p>
-              <img src="blog/ata-horse-child.png" alt="" />
+              <img src="blog/ata-horse-child.jpg" alt="" />
             </div>
             <h3>來吉爾吉斯要自助旅行還是跟團呢？</h3>
             <p></p>
@@ -331,6 +331,7 @@
     </section>
 
     <!---------- Our Youtube Videos  ----------->
+
     <section class="section-video">
       <h1>我們的 YouTube 影片</h1>
       <div class="container">
@@ -354,6 +355,11 @@
         </div>
       </div>
     </section>
+
+    <lite-youtube
+      videoid="VF0NtS1_uG8?si=RZknnBTKuE9jvI9u"
+      params="controls=1"
+    ></lite-youtube>
 
     <!---------- Why Choose Us  ----------->
     <section class="why-us">
@@ -680,7 +686,7 @@
           <a href="index.html"
             ><img
               class="logo"
-              src="bek-ruby-logo/bek-ruby-orange-green-2.png"
+              src="bek-ruby-logo/bek-ruby-orange-green-2.svg"
               alt="Bek Ruby Logo"
           /></a>
         </div>
