--- a/kyrgyzs-hospitality.html
+++ b/kyrgyzs-hospitality.html
@@ -79,7 +79,7 @@
             <img
               loading="lazy"
               class="first-photo"
-              src="hospitality/mom-and-guests.png"
+              src="hospitality/mom-and-guests.jpg"
               alt=""
             />
           </a>
