--- a/blog-article-1.html
+++ b/blog-article-1.html
@@ -57,33 +57,33 @@
 
     <section class="blog-article">
       <div class="blog-row">
-        <div class="blog-col">
-          <div class="blog-col-img">
-            <img src="blog/murmur.jpg" />
-          </div>
+        <div class="blog-col-info">
           <div class="mur-mur-blog-info">
             <div>
               <h2></h2>
               <p>
-                25歲的我創立了個人品牌Little OH! 手工飾品，<br />
-                這個人生最大轉捩點之一， 讓當時在辦公室上班快得憂鬱症的我，<br />
-                體會到自由， 創造和自我實現在我年輕的生命中展開。<br />
-                接下來的十年我飛到海外推廣品牌，<br />
-                也有更多時間到世界各地當背包客，<br />
-                自助旅行了三十多個國家，吉爾吉斯是最獨特之一，揭開中亞神秘的面紗，<br />
-                沒有污染的絲路風景，幽默好客的民族性都讓我記憶深刻。<br />
-                還記得瑞士好友Angie問我，你們在吉爾吉斯大山裡辦的傳統婚禮，<br />
-                真的是太酷了！ 騎馬進場， 自己蓋蒙古包， 穿上傳統服飾，<br />
-                你曾想過人生會有這樣的經歷嗎？ 泡在溫泉裡的我想了一下回答，<br />
-                其實好像沒有很意外呢, 關於山的書我可能有三五十本,<br />
-                一直都很熱愛少數民族文化，台灣原住民, 西藏, 泰北,<br />
+                25歲的我創立了個人品牌Little OH! 手工飾品，
+                這個人生最大轉捩點之一， 讓當時在辦公室上班快得憂鬱症的我，
+                體會到自由， 創造和自我實現在我年輕的生命中展開。
+                接下來的十年我飛到海外推廣品牌，
+                也有更多時間到世界各地當背包客，
+                自助旅行了三十多個國家，吉爾吉斯是最獨特之一，揭開中亞神秘的面紗，
+              </p>
+              <p>
+                沒有污染的絲路風景，幽默好客的民族性都讓我記憶深刻。
+                還記得瑞士好友Angie問我，你們在吉爾吉斯大山裡辦的傳統婚禮，
+                真的是太酷了！ 騎馬進場， 自己蓋蒙古包， 穿上傳統服飾，
+                你曾想過人生會有這樣的經歷嗎？ 泡在溫泉裡的我想了一下回答，
+                其實好像沒有很意外呢, 關於山的書我可能有三五十本,
+                一直都很熱愛少數民族文化，台灣原住民, 西藏, 泰北,
                 雲南等，沒想過要披西方的白色婚紗，反而看到傳統服飾和婚禮讓我非常興奮。
               </p>
-              <p class="ruby-blog-p">
-                是吸引力法則將我一路帶到了吉爾吉斯，這個被天山包圍的國度，心中充滿感謝！<br />
-                讓我的生命又翻到下一個章節，和貝殼一同期待，<br />
-                努力琢磨未來日子的樣貌。 人生就是這樣充滿驚奇,<br />
-                我接受所有的挫折和挑戰, 爬山想放棄的時候, 我告訴自己：<br />
+
+              <p>
+                是吸引力法則將我一路帶到了吉爾吉斯，這個被天山包圍的國度，心中充滿感謝！
+                讓我的生命又翻到下一個章節，和貝殼一同期待，
+                努力琢磨未來日子的樣貌。 人生就是這樣充滿驚奇,
+                我接受所有的挫折和挑戰, 爬山想放棄的時候, 我告訴自己：
                 痛苦會過去，美會留下！再堅持一下下就好囉！
               </p>
             </div>
