--- a/blog-article.html
+++ b/blog-article.html
@@ -57,10 +57,7 @@
 
     <section class="blog-article">
       <div class="blog-row">
-        <div class="blog-col">
-          <div class="blog-col-img">
-            <img src="blog/5 thins to do.jpg" />
-          </div>
+        <div class="blog-col-info">
           <div class="blog-info">
             <div>
               <h3>1 騎馬體驗</h3>
