--- a/blog-article-2.html
+++ b/blog-article-2.html
@@ -57,10 +57,7 @@
 
     <section class="blog-article">
       <div class="blog-row">
-        <div class="blog-col">
-          <div class="blog-col-img">
-            <img src="blog/ata-horse-child.jpg" />
-          </div>
+        <div class="blog-col-info">
           <div class="group-or-blog-info">
             <div>
               <h2></h2>
@@ -75,7 +72,7 @@
             <div>
               <h3>1 語言隔閡</h3>
               <p>
-                主要語言是吉語和俄語，即使在首都講英文也不通，<br />
+                主要語言是吉語和俄語，即使在首都講英文也不通，
                 比手畫腳很難解決旅行上的問題。
               </p>
             </div>
@@ -83,16 +80,16 @@
             <div>
               <h3>2 路況不佳</h3>
               <p>
-                只要往大山方向前進， 除了貫穿南北的路，<br />
-                基本上都是石頭路，路程遙遠方向也很複雜，<br />
-                建議請專業的司機, 旅行起來較安心。
+                只要往大山方向前進， 除了貫穿南北的路，
+                基本上都是石頭路，路程遙遠方向也很複雜， 建議請專業的司機,
+                旅行起來較安心。
               </p>
             </div>
 
             <div>
               <h3>3 健行安全</h3>
               <p>
-                溫差大且來到新的環境，<br />
+                溫差大且來到新的環境，
                 建議請嚮導可以盡興玩也能順便了解當地文化，
               </p>
             </div>
@@ -100,12 +97,9 @@
             <div>
               <h3>4 旅行資訊少， 資源不足</h3>
               <p>
-                這點是我覺得自助旅行很困難的原因之一，<br />
-                從甲地到乙地，<br />
-                可能有數十種方式，
-                <br />但每個當地人說法不同（比手畫腳），<br />
-                常常溝通就需要花費很多時間，<br />
-                建議和朋友組一個小團來玩。
+                這點是我覺得自助旅行很困難的原因之一， 從甲地到乙地，
+                可能有數十種方式， 但每個當地人說法不同（比手畫腳），
+                常常溝通就需要花費很多時間， 建議和朋友組一個小團來玩。
               </p>
             </div>
           </div>
