--- a/visa.html
+++ b/visa.html
@@ -66,12 +66,12 @@
               <div class="visa-info">
                 <h3>自行辦理電子簽證, 台灣護照被拒絕可能性70%</h3>
                 <p>
-                  電子簽證被拒絕要一年後才可再次申請
-                  <br />目前我們有找到可行的方法 <br />100%
-                  考拿到官方發出的電子簽證 <br />
-                  台灣護照. 香港特區護照皆可辦理 <br />
-                  目前只代辦吉爾吉電子簽證（無其他中亞國家）<br />簽證代辦費
-                  280美元
+                  自行辦理電子簽證， 台灣護照被拒絕可能性70% <br />
+                  電子簽證被拒絕要一年後才可再次申請 <br />
+                  目前我們有找到可行的方法 <br />
+                  100% 拿到官方發出的電子簽證 台灣護照可辦理 <br />
+                  目前只代辦吉爾吉電子簽證（無其他中亞國家）<br />
+                  簽證代辦費 180美元起
                 </p>
                 <div class="visa-btn">
                   <a class="visa-btn-email" href="mailto:bekruby.kg@gmail.com"
@@ -105,9 +105,8 @@
         </div>
         <div class="answer">
           <p>
-            參加團我們可以代辦簽證，一人60美金，繳交訂金一起支付，
-            申請簽證需要一個月時間，建議拿到簽證後再買機票，
-            吉爾吉斯簽證複雜，我們會盡力辦理，如提早買到便宜機票建議買能退票的較保險。
+            參加團我們可以代辦簽證，一人70美金，繳交訂金一起支付，
+            申請簽證需要兩週時間。
             簽證效期是一個月，從出發吉爾吉斯那天開始算起！
           </p>
         </div>
@@ -128,13 +127,50 @@
         </div>
         <div class="answer">
           <p>
-            可以！單純代辦簽證100% 通過是一人280
-            美金，約10個工作天，也可自行線上辦理電子簽證，台灣護照有70%被拒簽可能，拒簽我們無法幫忙，一年後才可再辦理。
+            可以！ 單純代辦電子簽證100% 通過是一人180 美金，約14個工作天，
+            <br />
+            如需加急辦理，七個工作天一人280 美金。 <br />
+            也可自行線上辦理電子簽證，台灣護照有70%被拒簽可能，
+            拒簽我們無法幫忙， 一年後才可再辦理。
+            <br />
+            我們沒有聽過落地簽證，也沒有任何經驗。 <br />
+            也可到附近國家有吉爾吉斯大使館辦理紙本簽證，網路上資訊是寫約兩週出簽。
           </p>
         </div>
       </div>
 
-      <p>
+      <div class="faq">
+        <div class="question">
+          <h3>如何申請電子簽證？</h3>
+
+          <svg width="15" height="10" viewBox="0 0 42 25">
+            <path
+              d="M3 3L21 21L39 3"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+          </svg>
+        </div>
+        <div class="answer">
+          <p>
+            1 護照照片 電子檔 (手機拍照可，不裁切任何資訊 ） <br />
+            2 個人照一張   請人用手機拍攝， 要拍到肩膀背景白色
+            （請勿翻拍證件照，不清楚）  <br />
+            3 出發往吉爾吉斯時間（不是抵達喔）簽證效期一個月 <br />
+            4 請回答: <br />
+            是否來過吉爾吉斯？ <br />
+            是否申請過吉爾吉斯電子簽證被拒絕？ <br />
+          </p>
+
+          <p>
+            送件後約兩週可收到吉爾吉斯電子簽證 <br />
+            以上資料請mail 到：   bekruby.kg@gmail.com
+          </p>
+        </div>
+      </div>
+
+      <p class="more-info">
         如果您有任何的問題，可以與我們保持聯繫，我們可以盡量提供您相關必要的訊息，謝謝您！）
       </p>
     </section>
