add price 13 Jun
add price for group in 7 days tour

--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -606,7 +606,23 @@
       </section>
 
       <!---------- important about tour info ----------->
+
       <section class="important-info">
+        <div class="price-for-group-container">
+          <div class="price-group-info">
+            <h2>經典七天行程</h2>
+            <p>✅ 參加跟團費用以總人數計算</p>
+            <p>八人開團 一人費用 1380 USD</p>
+            <p>六人開團 一人費用1480 USD</p>
+            <p>四人開團 一人費用 1630 USD</p>
+            <p>二人開團 一人費用 2480 USD</p>
+            <p>✅ 報價含全程食宿, 交通，中文導遊</p>
+            <p>不含簽證, 機票, 旅平險</p>
+
+            <p>（ 拼團依最多人搭機時間安排一次免費接送）</p>
+          </div>
+        </div>
+
         <div class="pricing-info">
           <div class="price-include">
             <h3>Price Includes</h3>
