--- a/question-answers.html
+++ b/question-answers.html
@@ -156,9 +156,8 @@
         </div>
         <div class="answer">
           <p>
-            參加團我們可以代辦簽證，一人60美金，繳交訂金一起支付，
-            申請簽證需要一個月時間，建議拿到簽證後再買機票，
-            吉爾吉斯簽證複雜，我們會盡力辦理，如提早買到便宜機票建議買能退票的較保險。
+            參加團我們可以代辦簽證，一人70美金，繳交訂金一起支付，
+            申請簽證需要兩週時間。
             簽證效期是一個月，從出發吉爾吉斯那天開始算起！
           </p>
         </div>
@@ -179,8 +178,14 @@
         </div>
         <div class="answer">
           <p>
-            可以！單純代辦簽證100% 通過是一人280
-            美金，約10個工作天，也可自行線上辦理電子簽證，台灣護照有70%被拒簽可能，拒簽我們無法幫忙，一年後才可再辦理。
+            可以！ 單純代辦電子簽證100% 通過是一人180 美金，約14個工作天，
+            <br />
+            如需加急辦理，七個工作天一人280 美金。 <br />
+            也可自行線上辦理電子簽證，台灣護照有70%被拒簽可能，
+            拒簽我們無法幫忙， 一年後才可再辦理。
+            <br />
+            我們沒有聽過落地簽證，也沒有任何經驗。 <br />
+            也可到附近國家有吉爾吉斯大使館辦理紙本簽證，網路上資訊是寫約兩週出簽。
           </p>
         </div>
       </div>
