--- a/visa.html
+++ b/visa.html
@@ -175,53 +175,75 @@
       </p>
     </section>
 
+    <!-------- footer ---------->
+
     <section class="footer">
       <div class="footer-container">
         <div class="footer-logo">
           <a href="index.html"
             ><img
+              loading="lazy"
               class="logo"
-              src="bek-ruby-logo/bek-ruby-orange-green-2.png"
+              src="bek-ruby-logo/bek-ruby-orange-green-2.svg"
               alt="Bek Ruby Logo"
           /></a>
+
+          <p class="footer-copyright">
+            Copyright © Bek & Ruby 2023 <br />
+            All Rights Reserved.
+          </p>
         </div>
-        <p>Copyright © Bek & Ruby 2023. All Rights Reserved.</p>
 
-        <div class="footer-row">
-          <div class="footer-nav-links">
-            <ul>
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="tours.html">TOURS</a></li>
-              <li><a href="blog.html">BLOG</a></li>
-              <li><a href="about-us.html">ABOUT US</a></li>
-              <li><a href="visa.html">VISA</a></li>
-              <li><a href="question-answers.html">Q&amp;A</a></li>
-              <li><a href="contact.html">CONTACT</a></li>
-            </ul>
+        <div class="footer-nav-links">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tours.html">Tours</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="about-us.html">Aout us</a></li>
+          </ul>
+          <ul class="second-links-ul">
+            <li><a href="visa.html">Visa</a></li>
+            <li><a href="question-answers.html">Q&amp;A</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="">7 days trip</a></li>
+          </ul>
+        </div>
+
+        <div class="company-info">
+          <ul>
+            <li>吉爾吉斯旅行社</li>
+            <li>
+              registration number <br />
+              02405202310152,
+            </li>
+            <li>
+              code OKPO 31953194 <br />
+              Kyrgyzstan, Naryn
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-media-btn">
+          <div class="links">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/profile.php?id=100063753081808"
+              ><i class="fa fa-facebook fa-2x"></i
+            ></a>
+
+            <a
+              target="_blank"
+              href="https://www.instagram.com/bek_ruby?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+              ><i class="fa fa-instagram fa-2x"></i
+            ></a>
+            <a target="_blank" href="https://www.youtube.com/@bek_ruby"
+              ><i class="fa fa-youtube fa-2x"></i
+            ></a>
           </div>
-
-          <div class="footer-media-btn">
-            <div class="links">
-              <a
-                target="_blank"
-                href="https://www.facebook.com/profile.php?id=100063753081808"
-                ><i class="fa fa-facebook fa-2x"></i
-              ></a>
-
-              <a
-                target="_blank"
-                href="https://www.instagram.com/bek_ruby?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                ><i class="fa fa-instagram fa-2x"></i
-              ></a>
-              <a target="_blank" href="https://www.youtube.com/@bek_ruby"
-                ><i class="fa fa-youtube fa-2x"></i
-              ></a>
-            </div>
-            <div class="footer-btn">
-              <a class="footer-btn-email" href="mailto:bekruby.kg@gmail.com"
-                ><span>SEND EMAIL</span></a
-              >
-            </div>
+          <div class="footer-btn">
+            <a class="footer-btn-email" href="mailto:bekruby.kg@gmail.com"
+              ><span>SEND EMAIL</span></a
+            >
           </div>
         </div>
       </div>
